--- a/package.json
+++ b/package.json
@@ -18,24 +18,31 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@commitlint/types": "^17.0.0",
+    "@skeletonlabs/skeleton": "^0.86.9",
     "@sveltejs/adapter-static": "1.0.0",
     "@sveltejs/kit": "1.0.1",
     "@tauri-apps/cli": "^1.2.2",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-jsonc": "^2.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte": "^2.14.1",
+    "eslint-plugin-tailwindcss": "^3.7.1",
     "eslint-plugin-unicorn": "^45.0.2",
     "husky": "^8.0.2",
+    "postcss": "^8.4.20",
+    "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.1",
     "prettier-plugin-svelte": "^2.9.0",
     "svelte": "^3.55.0",
     "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.0",
+    "tailwindcss": "^3.2.4",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.3"
