--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "eslint.validate": ["javascript", "typescript", "svelte", "json"],
-  "cSpell.words": ["skeletonlabs"]
+  "cSpell.words": ["skeletonlabs"],
+  "vitest.commandLine": "pnpm vitest"
 }
