--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
+    "dev": "tauri dev",
+    "build": "tauri build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-    "tauri": "tauri"
+    "test": "vitest"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.2.0"
@@ -22,7 +22,10 @@
     "@sveltejs/adapter-static": "1.0.0",
     "@sveltejs/kit": "1.0.1",
     "@tauri-apps/cli": "^1.2.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/svelte": "^3.2.2",
     "@types/node": "^18.11.18",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "autoprefixer": "^10.4.13",
@@ -35,6 +38,7 @@
     "eslint-plugin-tailwindcss": "^3.7.1",
     "eslint-plugin-unicorn": "^45.0.2",
     "husky": "^8.0.2",
+    "jsdom": "^20.0.3",
     "postcss": "^8.4.20",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.1",
@@ -45,6 +49,7 @@
     "tailwindcss": "^3.2.4",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
-    "vite": "^4.0.3"
+    "vite": "^4.0.3",
+    "vitest": "^0.26.2"
   }
 }
