--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.2.0"
+    "@tauri-apps/api": "2.0.0-alpha.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@commitlint/types": "^17.0.0",
     "@skeletonlabs/skeleton": "^0.86.9",
-    "@sveltejs/adapter-static": "1.0.0",
-    "@sveltejs/kit": "1.0.1",
-    "@tauri-apps/cli": "^1.2.2",
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/kit": "next",
+    "@tauri-apps/cli": "2.0.0-alpha.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.2",
     "@types/node": "^18.11.18",
@@ -35,7 +35,7 @@
     "eslint-plugin-jsonc": "^2.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte": "^2.14.1",
-    "eslint-plugin-tailwindcss": "^3.7.1",
+    "eslint-plugin-tailwindcss": "^3.8.0",
     "eslint-plugin-unicorn": "^45.0.2",
     "husky": "^8.0.2",
     "jsdom": "^20.0.3",
