--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,12 +11,12 @@ version      = "0.0.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.2", features = [] }
+tauri-build = { version = "2.0.0-alpha.0", features = [] }
 
 [dependencies]
 serde      = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tauri      = { version = "1.2", features = ["shell-open"] }
+tauri      = { version = "2.0.0-alpha.0", features = ["shell-open"] }
 
 [features]
 # by default Tauri runs in production mode
